<resources>
    <string name="app_name">Pet</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>

    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

        <string name="hello_world">Hello world!</string>
        <string name="action_settings">지역별 검색</string>
        <string name="nav_item_free">자유</string>
        <string name="nav_item_attachment">찾기</string>
        <string name="nav_item_images">보호</string>
        <string name="nav_item_location">같이 산책하기</string>
        <string name="nav_sub_menu">설정</string>
        <string name="nav_sub_menu_item01">마이페이지</string>
        <string name="nav_sub_menu_item00">메시지</string>
        <string name="nav_sub_menu_item02">로그아웃</string>
        <string name="drawer_header_text">Drawer Header</string>
        <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
        <string name="title_activity_second">SecondActivity</string>

</resources>
