<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_freec"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_item_free" />
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_item_attachment" />
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@drawable/ic_image"
            android:title="@string/nav_item_images" />
        <item
            android:id="@+id/navigation_item_location"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_location" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/nav_sub_menu_item01"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:id="@+id/nav_sub_menu_item00"
                android:icon="@drawable/ic_message_black1_24dp"
                android:title="메시지" />
            <item
                android:id="@+id/nav_sub_menu_item02"
                android:icon="@drawable/ic_backspace_black_24dp"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>

</menu>
